# xgboost-distribution

./: README.md  pyproject.toml
.github/workflows/: test.yml
examples/: basic_walkthrough.py  count_data.py  cv.py  experiments.py  hyperparameter_tuning.py
src/xgboost_distribution/: model.py
src/xgboost_distribution/distributions/: base.py  exponential.py  laplace.py  log_normal.py  negative_binomial.py  normal.py  poisson.py  utils.py
tests/distributions/: test_exponential.py  test_laplace.py  test_log_normal.py  test_negative_binomial.py  test_normal.py  test_poisson.py
