[tool.poetry]
name = "xgboost-distribution"
version = "0.1.0"
description = ""
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]
readme = "README.rst"
packages = [{include = "xgboost_distribution", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scikit-learn = "^1.2.1"
xgboost = "^1.7.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
esbonio = "^0.16.0"
docutils = "^0.19"
doc8 = "^1.1.1"
rstcheck = "^6.1.1"
pytest = "^7.2.1"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
sqlalchemy = "^2.0.3"
ngboost = "^0.3.13"
xlrd = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
